2010-08-25  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Network.cpp: clean up global name client
	object, and temporary carrier objects in metaConnect (thanks 
	Vadim Tikhanoff for catching these!).

2010-08-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Election.cpp: fix a race condition in
	multicast channel allocation (thanks Vadim Tikhanoff and
	Francesco Rea).

2010-08-24  Marco Randazzo  <marco.randazzo@iit.it>
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	fixed a bug related to methods getImpedanceOffset() setImpedanceOffset()
	
2010-08-23  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* scripts/debian: moved from original location, since they are just
	in the way for packagers (thanks Anne van Rossum)

2010-08-22  Arjan Gijsberts  <arjan@liralab.it>
	* src/libYARP_OS/harness/BottleTest.cpp
	* src/libYARP_OS/include/yarp/os/Bottle.h
	* src/libYARP_OS/include/yarp/os/impl/BottleImpl.h
	* src/libYARP_OS/src/Bottle.cpp
	* src/libYARP_OS/src/BottleImpl.cpp

	Bottle::pop() incorrectly returned references, triggering an 
	assertion problem in the copy constructor of Value (thanks 
	to Anne van Rossum for reporting the bug!)
	
2010-08-21  Paul Fitzpatrick  <paulfitz@debian.humanoids.iit.it>

	* src/libYARP_OS/include/yarp/os/Value.h: fix problem copying
	null values (thanks Arjan Gijsberts!)

2010-08-21  Paul Fitzpatrick  <paulfitz@sigmund>

	* src/libYARP_OS/src/Terminator.cpp: fix interrupt behavior on
	windows.

2010-08-21  Paul Fitzpatrick  <paulfitz@sigmund>

	* conf/FindACE.cmake: fix interface to output of
	scripts/fetch-ace.sh under windows.

2010-08-19 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_dev/src/ServerFrameGrabber.cpp
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabber.h
	* src/libYARP_dev/include/yarp/dev/RemoteFrameGrabberDC1394.h
	* src/libYARP_dev/include/yarp/dev/FrameGrabberInterfaces.h

	Added image offset control to dragonfly2 device.
