@@ -11,5 +11,5 @@ if (CREATE_OPTIONAL_CARRIERS)
     add_subdirectory(mjpeg_carrier)
   END_PLUGIN_LIBRARY(yarpcar)
   set_property(GLOBAL APPEND PROPERTY YARP_LIBS yarpcar ${yarpcar_LIBRARIES})
-  install(TARGETS yarpcar EXPORT YARP COMPONENT runtime DESTINATION lib)
+  install(TARGETS yarpcar EXPORT YARP COMPONENT runtime DESTINATION lib${LIB_SUFFIX})
 endif (CREATE_OPTIONAL_CARRIERS)
