@@ -24,7 +24,7 @@ include_directories(${ACE_INCLUDE_DIRS})
 
 add_library(YARP_OS ${folder_source} ${folder_header})
 target_link_libraries(YARP_OS ${ACE_LIBRARIES})
-install(TARGETS YARP_OS EXPORT YARP COMPONENT runtime DESTINATION lib)
+install(TARGETS YARP_OS EXPORT YARP COMPONENT runtime DESTINATION lib${LIB_SUFFIX})
 # Cannot APPEND here due to CMake 2.6.0 bug
 #set_property(GLOBAL APPEND PROPERTY YARP_LIBS YARP_OS)
 set_property(GLOBAL PROPERTY YARP_LIBS YARP_OS)
