@@ -65,6 +65,6 @@ BEGIN_PLUGIN_LIBRARY(yarpmod)
 
 END_PLUGIN_LIBRARY(yarpmod)
 set_property(GLOBAL APPEND PROPERTY YARP_LIBS yarpmod ${yarpmod_LIBRARIES})
-install(TARGETS yarpmod EXPORT YARP COMPONENT runtime DESTINATION lib)
+install(TARGETS yarpmod EXPORT YARP COMPONENT runtime DESTINATION lib${LIB_SUFFIX})
 
 endif (CREATE_DEVICE_LIBRARY_MODULES)
